--- a/GigHub2/Views/Gigs/GigForm.cshtml
+++ b/GigHub2/Views/Gigs/GigForm.cshtml
@@ -10,7 +10,7 @@
 @using (@Html.BeginForm(Model.Action, "Gigs"))
 {
 
-  <p class="alert alert-info"> All fields are <strong>required</strong></p>
+  @*<p class="alert alert-info"> All fields are <strong>required</strong></p>*@
   @Html.AntiForgeryToken()
 
   @Html.HiddenFor(m => m.Id)
